--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="fav/favicon.ico"/>
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="js/sound.js"></script>
-	<script src="js/jQuery.js"></script>
+	<script src="js/jquery.js"></script>
 	<style>
 		@font-face {
 		  font-family: starjedi;
