--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<style>
 		@font-face {
 		  font-family: starjedi;
-		  src: url("../font/starjedi.ttf");
+		  src: url("font/Starjedi.ttf");
 		}
 	  
 		* {
